# birdsound

./: .gitignore  AGENTS.md  README.md  build-all.sh  capacitor.config.ts  cljs-lib-1.0.0.tgz  index.html  metadata.json  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  local_model_jni.cpp  local_model_runtime.cpp  local_model_runtime.h
android/app/src/main/java/com/example/bird_sound/: MainActivity.java
android/app/src/main/java/com/example/bird_sound/localmodels/: LocalModelDefinition.java  LocalModelNativeBridge.java  LocalModelPlugin.java
android/app/src/main/res/values/: strings.xml
docs/: on-device-local-models.md
openspec/: config.yaml
openspec/changes/archive/2026-04-20-fix-mobile-settings-panel-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-fix-mobile-settings-panel-layout/specs/mobile-responsive-experience/: spec.md
openspec/changes/archive/2026-04-20-improve-mobile-responsive-ui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-improve-mobile-responsive-ui/specs/mobile-responsive-experience/: spec.md
openspec/changes/improve-results-page-mobile-responsive/: design.md  proposal.md  tasks.md
openspec/changes/improve-results-page-mobile-responsive/specs/mobile-optimized-layout/: spec.md
openspec/changes/improve-results-page-mobile-responsive/specs/responsive-results-display/: spec.md
openspec/specs/mobile-responsive-experience/: spec.md
src/: App.tsx  index.css  types.ts
src/constants/: birds.ts
src/services/: api.ts  history.ts  localModels.ts
